# sumire

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  build_unix.sh  build_win.bat  build_win_msvc.bat  env_template_win.cmake  requirements.txt  run.bat  run.sh  setup.py
assets/KBF/: armour_list.json
assets/KBF/DefaultConfigs/: alma.json  erik.json  gemma.json  npc.json  players.json
assets/models/primitives/: sphere.glb
config/: default_config.json
shaders/: grid.frag  grid.vert  mesh.frag  mesh.vert  mesh_unlit.frag  point_light.frag  point_light.vert  simple_mesh.frag  simple_mesh.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
shaders/deferred/: mesh_composite.frag  mesh_composite.vert  mesh_gbuffer.frag  mesh_gbuffer.vert  mesh_gbuffer_fill.frag  mesh_gbuffer_fill.vert  mesh_gbuffer_fill_unlit.frag  mesh_gbuffer_fill_unlit.vert  mesh_gbuffer_resolve.frag
shaders/forward/: mesh.frag  mesh.vert  mesh_unlit.frag
shaders/high_quality_shadow_mapping/: find_lights_accurate.comp  find_lights_approximate.comp  generate_deferred_shadows.comp
shaders/high_quality_shadow_mapping/debug/: vis_fs_triangle.vert  vis_hzb.frag  vis_light_count.frag  vis_light_shadow.frag
shaders/high_quality_shadow_mapping/find_lights_approx/: find_lights_approximate.comp  gen_slot_id_buffer_debug.comp
shaders/high_quality_shadow_mapping/includes/: inc_light_mask.glsl  inc_zbin.glsl
shaders/high_quality_shadow_mapping/subgroup64/: find_lights_accurate.comp  find_lights_approximate.comp  generate_deferred_shadows.comp
shaders/hzb/: gen_shadow_tile_hzb.comp  gen_single_hzb.comp
shaders/includes/: inc_camera.glsl  inc_global_uniforms.glsl  inc_heatmap.glsl  inc_joint.glsl  inc_light.glsl  inc_light_attenuation.glsl  inc_material.glsl  inc_pbr_brdf.glsl  inc_z_depth_2_view_depth.glsl  srgb2linear.glsl
shaders/post/: composite.frag  tonemap_aces.comp  tonemap_gt.comp  tonemap_linear.comp
shaders/world_ui/: grid.frag  grid.vert  point_light.frag  point_light.vert
src/: main.cpp  sde_device.cpp  sde_device.hpp  sde_model.cpp  sde_model.hpp  sde_pipeline.cpp  sde_pipeline.hpp  sde_swap_chain.cpp  sde_swap_chain.hpp  sde_window.cpp  sde_window.hpp  sumi_camera.cpp  sumi_device.cpp  sumi_device.hpp  sumi_kbm_controller.cpp  sumi_kbm_controller.hpp  sumi_model.cpp  sumi_model.hpp  sumi_object.hpp  sumi_pipeline.cpp  sumi_pipeline.hpp  sumi_render_system.cpp  sumi_render_system.hpp  sumi_renderer.cpp  sumi_renderer.hpp  sumi_swap_chain.cpp  sumi_swap_chain.hpp  sumi_window.cpp  sumi_window.hpp  sumire.cpp  sumire.hpp  sumirenderer.cpp  sumirenderer.hpp  tile_deferred_renderer.cpp  tile_deferred_renderer.hpp
src/sumire/: main.cpp
src/sumire/common/external_impl/: tinygltf_impl.cpp
src/sumire/config/: field_parsers.hpp  sumi_config.cpp  sumi_config.hpp  sumi_config_data.hpp
src/sumire/config/settings/: graphics_settings.hpp  keybind_settings.hpp  profiling_settings.hpp  shader_settings.hpp
src/sumire/core/: sumi_buffer.cpp  sumi_buffer.hpp  sumi_camera.cpp  sumi_camera.hpp  sumi_descriptors.cpp  sumi_descriptors.hpp  sumi_device.cpp  sumi_device.hpp  sumi_frame_info.hpp  sumi_model.cpp  sumi_model.hpp  sumi_object.hpp  sumi_pipeline.cpp  sumi_pipeline.hpp  sumi_render_system.cpp  sumi_render_system.hpp  sumi_renderer.cpp  sumi_renderer.hpp  sumi_swap_chain.cpp  sumi_swap_chain.hpp  sumi_texture.cpp  sumi_texture.hpp  sumi_transform3d.hpp  sumi_window.cpp  sumi_window.hpp  sumire.cpp  sumire.hpp  sumire_config.hpp
src/sumire/core/flags/: sumi_flags.hpp  sumi_pipeline_state_flags.hpp
src/sumire/core/graphics_pipeline/: impl_pipeline.hpp  sumi_attachment.cpp  sumi_attachment.hpp  sumi_buffer.cpp  sumi_buffer.hpp  sumi_compute_pipeline.cpp  sumi_compute_pipeline.hpp  sumi_descriptors.cpp  sumi_descriptors.hpp  sumi_device.cpp  sumi_device.hpp  sumi_pipeline.cpp  sumi_pipeline.hpp  sumi_swap_chain.cpp  sumi_swap_chain.hpp  sumi_texture.cpp  sumi_texture.hpp
src/sumire/core/materials/: sumi_material.cpp  sumi_material.hpp
src/sumire/core/models/: animation.hpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  primitive.hpp  skin.hpp  sumi_model.cpp  sumi_model.hpp  vertex.cpp  vertex.hpp
src/sumire/core/profiling/: cpu_profiler.cpp  cpu_profiler.hpp  gpu_profiler.cpp  gpu_profiler.hpp  profiling_block.hpp  profiling_block_timestamp.hpp
src/sumire/core/render_systems/: deferred_mesh_rendersys.cpp  deferred_mesh_rendersys.hpp  grid_rendersys.cpp  grid_rendersys.hpp  high_quality_shadow_mapper.cpp  high_quality_shadow_mapper.hpp  hzb_generator.cpp  hzb_generator.hpp  mesh_rendersys.cpp  mesh_rendersys.hpp  point_light_rendersys.cpp  point_light_rendersys.hpp  post_processor.cpp  post_processor.hpp  sumi_mesh_rendersys.cpp  sumi_mesh_rendersys.hpp
src/sumire/core/rendering/: sumi_camera.cpp  sumi_camera.hpp  sumi_frame_info.hpp  sumi_gbuffer.cpp  sumi_gbuffer.hpp  sumi_hzb.cpp  sumi_hzb.hpp  sumi_light.cpp  sumi_light.hpp  sumi_object.hpp  sumi_renderer.cpp  sumi_renderer.hpp  sumi_swap_chain.cpp  sumi_swap_chain.hpp  sumi_transform3d.hpp
src/sumire/core/shaders/: shader_compiler.cpp  shader_compiler.hpp  (+11 more)
src/sumire/gui/: sumi_imgui.cpp  sumi_imgui.hpp
src/sumire/input/: sumi_kbm_controller.cpp  sumi_kbm_controller.hpp
src/sumire/loaders/: gltf_loader.cpp  gltf_loader.hpp  obj_loader.cpp  obj_loader.hpp
src/sumire/math/: coord_space_converters.cpp  coord_space_converters.hpp  frustum_culling.cpp  frustum_culling.hpp  math_utils.hpp  view_space_depth.cpp  view_space_depth.hpp
src/sumire/util/: bit_field_operators.hpp  generate_mikktspace_tangents.cpp  generate_mikktspace_tangents.hpp  gltf_interpolators.cpp  gltf_interpolators.hpp  gltf_vulkan_flag_converters.cpp  gltf_vulkan_flag_converters.hpp  read_file_binary.cpp  read_file_binary.hpp  relative_engine_filepath.cpp  relative_engine_filepath.hpp  rw_file_binary.cpp  rw_file_binary.hpp  sumire_engine_path.hpp  vk_check_success.hpp
src/sumire/watchers/: fs_watch_action.hpp  fs_watch_listener.hpp  fs_watcher_win.cpp  fs_watcher_win.hpp
(+201 files in other folders)
